# test_p1p1p1p1

./: .env.example  .gitignore  BACKTESTING_GUIDE.md  GRID_OPTIMIZATION_PLAN.md  GRID_OPTIMIZATION_RESULTS.md  HONEST_CONCLUSION.md  IMPLEMENTATION_SUMMARY.md  README.md  TRADING_RULES.md  VERIFICATION_REPORT.md  analyze_results.ps1  check_progress.py  extract_top_strategies.ps1  generate_profit_strategy.ps1  long_analysis.py  main.py  pyproject.toml  retest_top_strategies.ps1  run_full_backtest.ps1  run_pipeline.py  start_analysis.bat  test_aggressive.py
.claude/: settings.local.json
config/: production_alternatives.json  production_strategy.json  robust_portfolio.json
docs/: EXPERIMENTS.md
guide/: CHANGELOG.docx  Derivatives Trading_USD-M Futures.docx  binance_api_doc.docx
scripts/: analyze_grid_explosion.py  calculate_before_state.py  inspect_backtest.py  run_backtest.py  run_paper.py  test_constraints.py
tests/: test_backtest.py  test_binance_endpoints.py  test_config_dotenv.py  test_experiments.py  test_grid_config.py  test_hardening.py  test_multisymbol.py  test_optimize.py  test_preflight_doctor.py  test_robust_filter.py  test_runtime_components.py  test_runtime_ops.py  test_sleep_mode.py  test_strategy.py  test_strategy_families.py  test_user_stream.py  test_ws_feed.py
trader/: backtest_compare.py  cli.py  config.py  daemon.py  exceptions.py  funding_arbitrage.py  funding_rate.py  futures_backtest.py  logging.py  massive_backtest.py  matrix_backtest.py  mtf_advanced.py  mtf_backtest.py  mtf_optimizer.py  multi_strategy_daemon.py  notify.py  optimize.py  (+5 more)
(+46 files in other folders)
