[project]
name = "binance-trader"
version = "0.1.0"
description = "Bootstrap project for Binance trading, backtesting, and paper/live execution."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.3",
    "ccxt>=4.5.36",
    "httpx>=0.28.1",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "rich>=14.3.2",
    "scipy>=1.15.0",
    "typer>=0.21.1",
    "websockets>=16.0",
]

[project.scripts]
trader = "trader.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["trader"]

[tool.pytest.ini_options]
testpaths = ["tests"]
